# protonge-fetcher

./: .gitignore  AGENTS.md  DESIGN.md  Makefile  PLAN.md  REPRODUCIBLE_BUILDS.md  conftest.py  fetcher.py  flake.nix  protonfetcher.py  pyproject.toml  test_e2e.py  test_fetcher.py  test_integration.py  test_protonfetcher.py  test_unit.py
.github/workflows/: build.yml
src/: entry.py
src/protonfetcher/: __init__.py  __version__.py  archive_extractor.py  asset_downloader.py  base_release_fetcher.py  candidate_selection.py  cli.py  common.py  exceptions.py  filesystem.py  forgejo_fetcher.py  github_fetcher.py  link_manager.py  link_status.py  network.py  spinner.py  (+7 more)
tests/: FIXTURES.md  TEST_DESIGN.md  __init__.py  conftest.py  coverage_report.py  data.py  factories.py  fixtures.py  test_archive_extractor.py  test_asset_downloader.py  test_asset_downloader_methods.py  test_attribute_coverage.py  test_base_release_fetcher.py  test_check_mode.py  test_cli.py  test_cli_dispatch.py  test_cli_e2e.py  test_cli_error_handling.py  test_cli_flags.py  test_cli_handlers.py  test_cli_validation.py  test_cli_validators.py  test_complete_workflow.py  test_complexity_regression.py  test_coverage_improvements.py  test_download_workflow.py  test_dry_run.py  test_e2e.py  test_error_handling_parametrized.py  test_errors.py  test_extraction.py  test_extraction_workflow.py  test_extraction_workflow_e2e.py  test_filesystem_client.py  test_forgejo_fetcher.py  test_fork_config.py  test_fork_parametrization.py  test_github_fetcher.py  test_github_fetcher_e2e.py  test_github_release_fetcher.py  (+28 more)
(+6 files in other folders)
